# cairou

./: .gitignore  CMakeLists.txt  README.md  README.rst
etc/: FindCairo.cmake  amccmake.conf  uninstall.cmake
src/: cairocks-glyphicons.c  cairocks-glyphicons.h  cairocks.h  cairocks.py  cairou-emboss.c  cairou-gaussian-blur.c  cairou-glyphicons.h  cairou-grid.c  cairou-icon.c  cairou-invert.c  cairou-map-path-onto.c  cairou-math.c  cairou-named-path.cpp  cairou-private.h  cairou-rectangle.c  cairou-spline.c  cairou-status.c  cairou-text.cpp  cairou.h  distance-field.c  emboss.c  gaussian-blur.c  gif-surface.c  glyphicons.c  grid.c  icon.c  invert.c  map-path-onto.c  named-path.c  named-path.cpp  rounded-rectangle.c  rounded.c  spline.c  surface-from-jpeg.c  surface-from-png.c  text.c  text.cpp  utf8.h
src/python/: cairockscffi.py
src/python/cairockscffi/: api.py
src/python/cairoucffi/: __init__.py  api.py  glyphicons.py
src/utf8/: checked.h  core.h  unchecked.h
tests/: gif-speed-test.py  python-module.py
tests/c/: CMakeLists.txt  common.c  common.h  named-path.c  test-grid.c  test-icon.c  test-named-path.c  test-text.c  text.c
tests/python/: gif-speed-test.py  merge.py  run-tests.py
tests/python-cffi/: basic-tests.py  cairocks.py  distance-field.py  emboss.py
tests/python/tests/: __init__.py  common.py  emboss.py  gaussian.py  image.py  path.py  rectangle.py  spline.py  text.py
tools/: cairo-cython-api  cairodraw  cairodraw-gtk2  cairodraw-gtk3  curvemaker-gtk3  embosser-gtk2  glyphicons-conv
tools/examples/: beveltext.py  roundbutton.py  widget.py
tools/styles/: cubicool.xml
